# Parser

./: .gitignore  CLAUDE.md  README.md  config.yaml.example  pyproject.toml
pipeline_output/: README.md
pipeline_output/tmp_tests/fix_test/: references.md
pipeline_output/workspace_tests/claude_test_report/: CLIENT_FAILURE_ANALYSIS.md  CLIENT_STATUS_UPDATE.md  COMMAND_TEST_RESULTS.md  COMPREHENSIVE_COMMAND_TESTING_REPORT.md  COMPREHENSIVE_TEST_REPORT.md  FINAL_IMPROVEMENTS_SUMMARY.md  FIXES_IMPLEMENTED.md  README.md
pipeline_output/workspace_tests/final_tests/: README.md
pipeline_output/workspace_tests/final_tests/01_sources/: README.md  output.txt
pipeline_output/workspace_tests/final_tests/02_retrieve/: README.md  output.txt
pipeline_output/workspace_tests/final_tests/03_batch/: README.md  output.txt  test_dois.txt
pipeline_output/workspace_tests/final_tests/04_parse_refs/: README.md  output.txt  references.md
pipeline_output/workspace_tests/final_tests/05_doi2bib/: README.md  from_file.bib  output.txt  output2.txt  output_from_file.txt
pipeline_output/workspace_tests/final_tests/06_verify/: README.md  output.txt  test.bib
pipeline_output/workspace_tests/final_tests/07_citations/: README.md  output.txt
pipeline_output/workspace_tests/final_tests/08_init/: README.md  output.txt
pipeline_output/workspace_tests/final_tests/09_auth/: README.md  output.txt
pipeline_output/workspace_tests/final_tests/10_config/: README.md  output.txt
pipeline_output/workspace_tests/final_tests/11_sources_individual/: README.md  output.txt
pipeline_output/workspace_tests/final_tests/12_parse_refs_advanced/: README.md  batch.json  dois.txt  output.txt  references.json
pipeline_output/workspace_tests/final_tests2/: README.md
pipeline_output/workspace_tests/test_results/: parsing_comparison.md
pipeline_output/workspace_tests/test_v2/: README.md
src/parser/: cli.py  parser.py  validation.py
src/parser/acquisition/: README.md  retriever.py
src/parser/agent/: anthropic_agent.py  base.py
(+61 files in other folders)
